// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PythonFile > Add a Method 1`] = `
"def test_method() -> str:
    pass
"
`;

exports[`PythonFile > Add a class that inherits from a class imported from another file 1`] = `
"from .test_module.base import BaseClass


class DerivedClass(BaseClass):
    pass
"
`;

exports[`PythonFile > Add a class with a reference that uses a python standard library reference 1`] = `
"from itertools import chain


class TestClass:
    flat_list = list(itertools.chain([[1, 2], [3, 4]]))
"
`;

exports[`PythonFile > Add a class with a reference that uses a relative import 1`] = `
"from .my_module.level_1 import OtherClass
from .my_module.level_1.level_2 import DeepClass


class TestClass(OtherClass):
    pass


class DeeplyNestedTestClass(DeepClass):
    pass
"
`;

exports[`PythonFile > Add a class with a relative import and alias 1`] = `
"from ..test_module.test.sibling_dir import SiblingClass as AliasedSibling


class TestClassWithRelativeAlias(AliasedSibling):
    pass
"
`;

exports[`PythonFile > Add a class with an absolute import and alias 1`] = `
"from external_module.submodule import ExternalClass as AliasedClass


class TestClassWithAlias(AliasedClass):
    pass
"
`;

exports[`PythonFile > Add a class with no references 1`] = `
"class TestClass:
    pass
"
`;

exports[`PythonFile > Add a code block 1`] = `
"print("Hello, World!")
"
`;

exports[`PythonFile > Add a field with a list of reference type and initializer 1`] = `
"from typing import List
from .test_module.cars import Car

cars: List[Car] = [Car(), Car()]
"
`;

exports[`PythonFile > Ensure we don't duplicate imports 1`] = `
"from typing import List

var_a: List[str]

var_b: List[str]
"
`;

exports[`PythonFile > Multiple imports from the same module should work 1`] = `
"from typing import Union, List, Set

variable: Union[List[str], Set[str]]
"
`;

exports[`PythonFile > Set a variable to a nested attribute of an imported reference 1`] = `
"from external_module import ImportedClass

my_variable: ImportedClass.nested.attribute
"
`;
